<resources>
    <string name="app_name">DessertPlace</string>
    <string name="account">My Account</string>
    <string name="setting">Settings</string>
    <string name="log_out">Log out</string>
    <string name="cake">CAKE</string>
    <string name="donuts">DONUTS</string>
    <string name="ice_cream">ICE CREAM</string>
    <string name="delivery">Choose Delivery method</string>
    <string name="address">Address</string>
    <string name="same_day">Same day messenger service</string>
    <string name="next_day">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="mobile">Contact</string>
    <string name="note">Note</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="name_here">Enter here</string>
    <string name="title2">Select your dessert</string>
    <string name="hello">Hello,</string>
    <string name="name">Enter your name</string>
    <string name="welcome">Welcome to the Dessert place</string>
    <string name="item">Item</string>
    <string name="favorites">Favorites</string>
    <string name="info">info</string>
    <string name="shop">shop</string>
    <string name="contact">contact</string>
    <string name="contactUs">Contact Us</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="header_image">Header Image</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="the_dessert_place">THE DESSERT PLACE</string>
    <string name="title_activity">Second Activity</string>
    <string name="date">JAN 01 2020</string>


    <!--
    To toggle the open/close button
    of the navigation drawer
    -->
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>